Support Java 17 in initializr Take 2 (#4604)
* Support Java 17 in initializr Take 2

* Trying further fixes for Java 17

* Fixes for the xcode target on JDK 17 builds